kafka listener changes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=currency-analytics
 server.port=8764
+kafka.bootstrap.server=localhost:29092
+kafka.topic.currency.conversion=currency-conversion-topic
