--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,11 @@
       <version>1.18.20</version>
       <scope>provided</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-elasticsearch</artifactId>
+      <version>4.0.0.RELEASE</version>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
